Pushing first draft

--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
 </header>
 
 
-  <!-- ✅ MAIN CONTENT -->
   <main class="max-w-7xl mx-auto p-6 space-y-12">
 
     <!-- About -->
@@ -264,7 +263,7 @@
     </p>
     <ol class="mt-0 text-justify" style="font-size:1vw">
     <li><b>First</b>, we needed a realistic testbed to investigate the security of Internet-borne OT traffic. In absence of such a state-of-the-art testbed, we built our own <span class="text-blue-600 font-semibold">in-house testbed</span>. It mimics a 6-stage water treatment plant, similar to the physical one hosted at SUTD Singapore, except that the SCADA is now hosted on the cloud, and it incorporates state-of-the-art security measures.<br/><br/></li>
-    <li><b>Second</b>, we studied the characteristics of OT traffic and investigated its susceptibility to DoS attacks. We found that while the state-of-the-art ICS security measures thwart known DoS attacks, <i><u>OT communications are vulnerable to a novel targeted DoS attack</u></i>. We built a prototype of this attack and named it <span class="text-blue-600 font-semibold">ICS-Sniper</span>. This is concerning as ICS-Sniper can be executed from outside of the ICS perimeter, by remote adversaries, and can potentially break the synchorization among its mechanical components, thereby disrupting ICS operations. Much like a sniper attack, it is highly precise and undetectable.<br/></li>
+    <li><b>Second</b>, we studied the characteristics of OT traffic and investigated its susceptibility to DoS attacks. We found that while the state-of-the-art ICS security measures thwart known DoS attacks, <i><u>OT communications are vulnerable to a novel targeted DoS attack</u></i>. We built a prototype of this attack and named it <span class="text-blue-600 font-semibold">ICS-Sniper</span>. This is concerning as ICS-Sniper can be executed from outside of the ICS perimeter, by remote adversaries, and can break the synchorization among its mechanical components, thereby disrupting ICS operations. Much like a sniper attack, it is highly precise and undetectable. <b>Stay tuned here to know more about ICS-Sniper.</b><br/></li>
   </ol>
   </div>
   <div>
@@ -287,6 +286,7 @@
     </div>
 
 </section>
+
 
 
 
